# 6dof-robotic-arm-ros2-1.0

./: .gitignore  README.md  frames_2026-03-06_11.01.23.gv  frames_2026-03-07_19.36.31.gv  frames_2026-03-08_12.44.08.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_bringup/share/arm_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm_description/share/arm_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_kinematics/lib/arm_kinematics/: fk_node  home_pose_node  ik_node  pose_gui
install/arm_kinematics/share/arm_kinematics/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dof6arm/share/dof6arm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dof6arm/share/dof6arm/launch/: view.launch1.py
install/dof6arm/share/dof6arm/meshes/: base_link.STL  link1.STL  link5.STL  link6.STL
install/dof6arm/share/dof6arm/urdf/: backup.urdf  dof6arm.SLDASM.csv  dof6arm.urdf  dof6arm2.0.urdf
log/: latest_build
src/: interface.html  interfaceold.html
src/arm_bringup/: package.xml  setup.py
src/arm_bringup/launch/: system.launch.py
src/arm_kinematics/: setup.cfg  setup.py
src/arm_kinematics/arm_kinematics/: ik_node.py
src/dof6arm/: README.md  setup.cfg  setup.py
src/dof6arm/launch/: display.launch  gazebo.launch
src/dof6arm/meshes/: endfector.STL  link2.STL  link3.STL  link4.STL
src/dof6arm/urdf/: dof6arm.urdf
src/robot_web/: robot_web.html
