<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dof6arm</name>
  <version>0.1.0</version>
  <description>no</description>
  <maintainer email="jenil@gmail.com">jenil</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
 

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_sim_ros2_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
